Basic Braid (Parallel Coordinates) plot

--- a/Serialize_DESeq_Data_to_JSON.ipynb
+++ b/Serialize_DESeq_Data_to_JSON.ipynb
@@ -154,7 +154,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "human['log2(FC)'].to_json('./web/human_logFC.json')"
+    "human['log2(FC)'].to_json('./json/human_logFC.json')"
    ]
   },
   {
@@ -294,7 +294,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mouse['log2(FC)'].to_json('./web/mouse_logFC.json')"
+    "mouse['log2(FC)'].to_json('./json/mouse_logFC.json')"
    ]
   },
   {
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +415,7 @@
        "SLC1A6       2.153360e-27  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,11 +427,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "lee['log2(FC)'].to_json('./web/lee_logFC.json')"
+    "lee['log2(FC)'].to_json('./json/lee_logFC.json')"
    ]
   },
   {
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -480,11 +480,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "human[['logFC', 'q']].to_json('./web/human_logFC_qVal.json', orient='index')"
+    "human[['logFC', 'q']].to_json('./json/human_logFC_qVal.json', orient='index')"
    ]
   },
   {
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -526,11 +526,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mouse[['logFC', 'q']].to_json('./web/mouse_logFC_qVal.json', orient='index')"
+    "mouse[['logFC', 'q']].to_json('./json/mouse_logFC_qVal.json', orient='index')"
    ]
   },
   {
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -564,11 +564,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "lee[['logFC', 'q']].to_json('./web/lee_logFC_qVal.json', orient='index')"
+    "lee[['logFC', 'q']].to_json('./json/lee_logFC_qVal.json', orient='index')"
    ]
   },
   {
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +685,7 @@
        "MIR1302-2          0.000       0.000  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -697,11 +697,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "human.to_json('./web/human_counts.json')"
+    "human.to_json('./json/human_counts.json')"
    ]
   },
   {
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -813,7 +813,7 @@
        "RP23-317L18.4         0.0         0.0  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -825,11 +825,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mouse.to_json('./web/mouse_counts.json')"
+    "mouse.to_json('./json/mouse_counts.json')"
    ]
   },
   {
