--- a/Serialize_Gene_Sets_to_JSON.ipynb
+++ b/Serialize_Gene_Sets_to_JSON.ipynb
@@ -172,7 +172,7 @@
        "    <tr>\n",
        "      <th>'de novo' GDP-L-fucose biosynthetic process</th>\n",
        "      <th>GO:0042351</th>\n",
-       "      <td>[GMDS, GMDS, TSTA3, TSTA3, TSTA3]</td>\n",
+       "      <td>[GMDS, GMDS, GMDS, TSTA3, TSTA3, TSTA3]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>'de novo' IMP biosynthetic process</th>\n",
@@ -193,7 +193,7 @@
        "GO_term                                     GO_ID                                                  \n",
        "'de novo' AMP biosynthetic process          GO:0044208     [ADSL, ADSL, ADSS, ADSS, ADSSL1, ADSSL1]\n",
        "'de novo' CTP biosynthetic process          GO:0044210                               [CTPS1, CTPS2]\n",
-       "'de novo' GDP-L-fucose biosynthetic process GO:0042351            [GMDS, GMDS, TSTA3, TSTA3, TSTA3]\n",
+       "'de novo' GDP-L-fucose biosynthetic process GO:0042351      [GMDS, GMDS, GMDS, TSTA3, TSTA3, TSTA3]\n",
        "'de novo' IMP biosynthetic process          GO:0006189  [ADSL, ATIC, GART, PFAS, PFAS, PPAT, PAICS]\n",
        "'de novo' L-methionine biosynthetic process GO:0071266                                        [CTH]"
       ]
@@ -248,7 +248,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>'de novo' GDP-L-fucose biosynthetic process (GO:0042351)</th>\n",
-       "      <td>[GMDS, GMDS, TSTA3, TSTA3, TSTA3]</td>\n",
+       "      <td>[GMDS, GMDS, GMDS, TSTA3, TSTA3, TSTA3]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>'de novo' IMP biosynthetic process (GO:0006189)</th>\n",
@@ -266,7 +266,7 @@
        "                                                                                     GeneSymbol\n",
        "'de novo' AMP biosynthetic process (GO:0044208)        [ADSL, ADSL, ADSS, ADSS, ADSSL1, ADSSL1]\n",
        "'de novo' CTP biosynthetic process (GO:0044210)                                  [CTPS1, CTPS2]\n",
-       "'de novo' GDP-L-fucose biosynthetic process (GO...            [GMDS, GMDS, TSTA3, TSTA3, TSTA3]\n",
+       "'de novo' GDP-L-fucose biosynthetic process (GO...      [GMDS, GMDS, GMDS, TSTA3, TSTA3, TSTA3]\n",
        "'de novo' IMP biosynthetic process (GO:0006189)     [ADSL, ATIC, GART, PFAS, PFAS, PPAT, PAICS]\n",
        "'de novo' L-methionine biosynthetic process (GO...                                        [CTH]"
       ]
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
        "4  KEGG_FRUCTOSE_AND_MANNOSE_METABOLISM\\thttp://w..."
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +438,7 @@
        "KEGG_FRUCTOSE_AND_MANNOSE_METABOLISM           KEGG_FRUCTOSE_AND_MANNOSE_METABOLISM\\thttp://w..."
       ]
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +511,7 @@
        "KEGG_FRUCTOSE_AND_MANNOSE_METABOLISM           [MPI, PMM2, PMM1, FBP2, PFKM, GMDS, PFKFB4, PF..."
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +586,7 @@
        "Fructose And Mannose Metabolism (KEGG)           [MPI, PMM2, PMM1, FBP2, PFKM, GMDS, PFKFB4, PF..."
       ]
      },
-     "execution_count": 20,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -598,16 +598,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "msigdb['GeneSymbol'].to_json('/Users/alex/Documents/abcd1/msigdb_pathway_genes.json')"
+    "msigdb['GeneSymbol'].to_json('/Users/alex/Documents/abcd1/json/msigdb_pathway_genes.json')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -714,19 +714,19 @@
        "4   10090  0610006L08Rik  GO:0005575       ND  cellular_component  Component"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "go = pd.read_csv('../../Desktop/mouse_go/mouse2go.csv')\n",
+    "go = pd.read_csv('./mouse_go/mouse2go.csv')\n",
     "go.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +808,7 @@
        "'de novo' NAD biosynthetic process from aspartate GO:0034628   [Nmnat1, Nmnat2, Nmnat3]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -881,7 +881,7 @@
        "'de novo' NAD biosynthetic process from asparta...   [Nmnat1, Nmnat2, Nmnat3]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -893,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
