--- a/Serialize_DESeq_Data_to_JSON.ipynb
+++ b/Serialize_DESeq_Data_to_JSON.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def serialize(df, name): open(f\"{name}.js\", 'w').write(f\"var {name} = {df.to_json()};\\n\")"
+    "def serialize(df, name, how='columns'): open(f\"{name}.js\", 'w').write(f\"var {name} = {df.to_json(orient=how)};\\n\")"
    ]
   },
   {
@@ -202,7 +202,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "serialize(human[['logFC', 'q']], 'human_differential')"
+    "serialize(human[['logFC', 'q']], 'human_differential', how='index')"
    ]
   },
   {
@@ -381,7 +381,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "serialize(mouse[['logFC', 'q']], 'mouse_differential')"
+    "serialize(mouse[['logFC', 'q']], 'mouse_differential', how='index')"
    ]
   },
   {
@@ -549,7 +549,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "serialize(lee[['logFC', 'q']], 'lee_differential')"
+    "serialize(lee[['logFC', 'q']], 'lee_differential', how='index')"
    ]
   },
   {
