generate mouse, human, lee merged df

--- a/Serialize_Gene_Sets_to_JSON.ipynb
+++ b/Serialize_Gene_Sets_to_JSON.ipynb
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
        "4  KEGG_FRUCTOSE_AND_MANNOSE_METABOLISM\\thttp://w..."
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +438,7 @@
        "KEGG_FRUCTOSE_AND_MANNOSE_METABOLISM           KEGG_FRUCTOSE_AND_MANNOSE_METABOLISM\\thttp://w..."
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +511,7 @@
        "KEGG_FRUCTOSE_AND_MANNOSE_METABOLISM           [MPI, PMM2, PMM1, FBP2, PFKM, GMDS, PFKFB4, PF..."
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +586,7 @@
        "Fructose And Mannose Metabolism (KEGG)           [MPI, PMM2, PMM1, FBP2, PFKM, GMDS, PFKFB4, PF..."
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -603,6 +603,15 @@
    "outputs": [],
    "source": [
     "msigdb['GeneSymbol'].to_json('/Users/alex/Documents/abcd1/json/msigdb_pathway_genes.json')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.concat([go, msigdb])['GeneSymbol'].to_pickle('./human_gene_sets.pickle')"
    ]
   },
   {
@@ -924,7 +933,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
