--- a/Serialize_DESeq_Data_to_JSON.ipynb
+++ b/Serialize_DESeq_Data_to_JSON.ipynb
@@ -342,18 +342,18 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "max q-val: 211.3549864860441\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "/Users/alex/Documents/abcd1/venv/lib/python3.7/site-packages/ipykernel_launcher.py:1: RuntimeWarning: divide by zero encountered in log10\n",
       "  \"\"\"Entry point for launching an IPython kernel.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "max q-val: 211.3549864860441\n"
      ]
     }
    ],
@@ -1671,7 +1671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1819,7 +1819,7 @@
        "A2ML1                6.671977             6.959798             6.954089  "
       ]
      },
-     "execution_count": 60,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1831,7 +1831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2050,7 +2050,7 @@
        "[5 rows x 30 columns]"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2062,7 +2062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2078,7 +2078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2357,7 +2357,7 @@
        "Jang-iPSCs_CCALD_82      Jang-iPSCs_CCALD_82  Jang-iPSCs     CCALD        82"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2370,7 +2370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -2461,92 +2461,92 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Lee_ccALD_3</th>\n",
-       "      <td>iPSC</td>\n",
+       "      <td>Lee-iPSC</td>\n",
        "      <td>ABCD1 KO</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Lee_ccALD_2</th>\n",
-       "      <td>iPSC</td>\n",
+       "      <td>Lee-iPSC</td>\n",
        "      <td>ABCD1 KO</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Lee_ccALD_1</th>\n",
-       "      <td>iPSC</td>\n",
+       "      <td>Lee-iPSC</td>\n",
        "      <td>ABCD1 KO</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Lee_WT_3</th>\n",
-       "      <td>iPSC</td>\n",
+       "      <td>Lee-iPSC</td>\n",
        "      <td>WT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Lee_WT_2</th>\n",
-       "      <td>iPSC</td>\n",
+       "      <td>Lee-iPSC</td>\n",
        "      <td>WT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Lee_WT_1</th>\n",
-       "      <td>iPSC</td>\n",
+       "      <td>Lee-iPSC</td>\n",
        "      <td>WT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Jang-hESCs_Control_71</th>\n",
-       "      <td>hESC</td>\n",
+       "      <td>Jang-iPSC</td>\n",
        "      <td>WT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Jang-hESCs_Control_72</th>\n",
-       "      <td>hESC</td>\n",
+       "      <td>Jang-iPSC</td>\n",
        "      <td>WT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Jang-hESCs_Control_73</th>\n",
-       "      <td>hESC</td>\n",
+       "      <td>Jang-iPSC</td>\n",
        "      <td>WT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Jang-iPSCs_Control_74</th>\n",
-       "      <td>iPSC</td>\n",
+       "      <td>Jang-iPSC</td>\n",
        "      <td>WT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Jang-iPSCs_Control_75</th>\n",
-       "      <td>iPSC</td>\n",
+       "      <td>Jang-iPSC</td>\n",
        "      <td>WT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Jang-iPSCs_Control_76</th>\n",
-       "      <td>iPSC</td>\n",
+       "      <td>Jang-iPSC</td>\n",
        "      <td>WT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Jang-iPSCs_AMN_77</th>\n",
-       "      <td>iPSC</td>\n",
+       "      <td>Jang-iPSC</td>\n",
        "      <td>AMN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Jang-iPSCs_AMN_78</th>\n",
-       "      <td>iPSC</td>\n",
+       "      <td>Jang-iPSC</td>\n",
        "      <td>AMN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Jang-iPSCs_AMN_79</th>\n",
-       "      <td>iPSC</td>\n",
+       "      <td>Jang-iPSC</td>\n",
        "      <td>AMN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Jang-iPSCs_CCALD_80</th>\n",
-       "      <td>iPSC</td>\n",
+       "      <td>Jang-iPSC</td>\n",
        "      <td>ccALD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Jang-iPSCs_CCALD_81</th>\n",
-       "      <td>iPSC</td>\n",
+       "      <td>Jang-iPSC</td>\n",
        "      <td>ccALD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Jang-iPSCs_CCALD_82</th>\n",
-       "      <td>iPSC</td>\n",
+       "      <td>Jang-iPSC</td>\n",
        "      <td>ccALD</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -2554,53 +2554,53 @@
        "</div>"
       ],
       "text/plain": [
-       "                      system condition\n",
-       "Human_ABCD1_1          Human  ABCD1 KO\n",
-       "Human_ABCD1_2          Human  ABCD1 KO\n",
-       "Human_ABCD1_3          Human  ABCD1 KO\n",
-       "Human_NT_1             Human        WT\n",
-       "Human_NT_2             Human        WT\n",
-       "Human_NT_3             Human        WT\n",
-       "Mouse_ABCD1_1          Mouse  ABCD1 KO\n",
-       "Mouse_ABCD1_2          Mouse  ABCD1 KO\n",
-       "Mouse_ABCD1_3          Mouse  ABCD1 KO\n",
-       "Mouse_NT_1             Mouse        WT\n",
-       "Mouse_NT_2             Mouse        WT\n",
-       "Mouse_NT_3             Mouse        WT\n",
-       "Lee_ccALD_3             iPSC  ABCD1 KO\n",
-       "Lee_ccALD_2             iPSC  ABCD1 KO\n",
-       "Lee_ccALD_1             iPSC  ABCD1 KO\n",
-       "Lee_WT_3                iPSC        WT\n",
-       "Lee_WT_2                iPSC        WT\n",
-       "Lee_WT_1                iPSC        WT\n",
-       "Jang-hESCs_Control_71   hESC        WT\n",
-       "Jang-hESCs_Control_72   hESC        WT\n",
-       "Jang-hESCs_Control_73   hESC        WT\n",
-       "Jang-iPSCs_Control_74   iPSC        WT\n",
-       "Jang-iPSCs_Control_75   iPSC        WT\n",
-       "Jang-iPSCs_Control_76   iPSC        WT\n",
-       "Jang-iPSCs_AMN_77       iPSC       AMN\n",
-       "Jang-iPSCs_AMN_78       iPSC       AMN\n",
-       "Jang-iPSCs_AMN_79       iPSC       AMN\n",
-       "Jang-iPSCs_CCALD_80     iPSC     ccALD\n",
-       "Jang-iPSCs_CCALD_81     iPSC     ccALD\n",
-       "Jang-iPSCs_CCALD_82     iPSC     ccALD"
+       "                          system condition\n",
+       "Human_ABCD1_1              Human  ABCD1 KO\n",
+       "Human_ABCD1_2              Human  ABCD1 KO\n",
+       "Human_ABCD1_3              Human  ABCD1 KO\n",
+       "Human_NT_1                 Human        WT\n",
+       "Human_NT_2                 Human        WT\n",
+       "Human_NT_3                 Human        WT\n",
+       "Mouse_ABCD1_1              Mouse  ABCD1 KO\n",
+       "Mouse_ABCD1_2              Mouse  ABCD1 KO\n",
+       "Mouse_ABCD1_3              Mouse  ABCD1 KO\n",
+       "Mouse_NT_1                 Mouse        WT\n",
+       "Mouse_NT_2                 Mouse        WT\n",
+       "Mouse_NT_3                 Mouse        WT\n",
+       "Lee_ccALD_3             Lee-iPSC  ABCD1 KO\n",
+       "Lee_ccALD_2             Lee-iPSC  ABCD1 KO\n",
+       "Lee_ccALD_1             Lee-iPSC  ABCD1 KO\n",
+       "Lee_WT_3                Lee-iPSC        WT\n",
+       "Lee_WT_2                Lee-iPSC        WT\n",
+       "Lee_WT_1                Lee-iPSC        WT\n",
+       "Jang-hESCs_Control_71  Jang-iPSC        WT\n",
+       "Jang-hESCs_Control_72  Jang-iPSC        WT\n",
+       "Jang-hESCs_Control_73  Jang-iPSC        WT\n",
+       "Jang-iPSCs_Control_74  Jang-iPSC        WT\n",
+       "Jang-iPSCs_Control_75  Jang-iPSC        WT\n",
+       "Jang-iPSCs_Control_76  Jang-iPSC        WT\n",
+       "Jang-iPSCs_AMN_77      Jang-iPSC       AMN\n",
+       "Jang-iPSCs_AMN_78      Jang-iPSC       AMN\n",
+       "Jang-iPSCs_AMN_79      Jang-iPSC       AMN\n",
+       "Jang-iPSCs_CCALD_80    Jang-iPSC     ccALD\n",
+       "Jang-iPSCs_CCALD_81    Jang-iPSC     ccALD\n",
+       "Jang-iPSCs_CCALD_82    Jang-iPSC     ccALD"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "classes['system'] = classes['system'].replace('Lee','iPSC').replace('Jang-iPSCs', 'iPSC').replace('Jang-hESCs', 'hESC')\n",
+    "classes['system'] = classes['system'].replace('Lee','Lee-iPSC').replace('Jang-iPSCs', 'Jang-iPSC').replace('Jang-hESCs', 'Jang-iPSC')\n",
     "classes['condition'] = classes['condition'].replace('ABCD1', 'ABCD1 KO').replace('ccALD', 'ABCD1 KO').replace('CCALD', 'ccALD').replace('NT', 'WT').replace('Control', 'WT')\n",
     "classes[['system', 'condition']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
