--- a/analyses/OmicsIntegrator2_on_Human_Transcription_Data.ipynb
+++ b/analyses/OmicsIntegrator2_on_Human_Transcription_Data.ipynb
@@ -132,7 +132,7 @@
    ],
    "source": [
     "NUM = 500\n",
-    "human = pd.read_csv('DESeq2_data/Yamuna/Human_NT_vs_ABCD1_DESeq2_results.tsv', sep='\\t', header=None, names=['GeneID','Base_Mean','log2FC','StdErr','Wald_Stats','P_value','P_adj'])\n",
+    "human = pd.read_csv('../data/Yamuna/Human_NT_vs_ABCD1_DESeq2_results.tsv', sep='\\t', header=None, names=['GeneID','Base_Mean','log2FC','StdErr','Wald_Stats','P_value','P_adj'])\n",
     "human = pd.concat([human.set_index('GeneID').rename_axis(None).loc[['ABCD1', 'TGFB1']], human.set_index('GeneID').rename_axis(None)[:NUM]])\n",
     "human.head()"
    ]
@@ -282,6 +282,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "prize_file = \"human_deseq_prizes_500.tsv\"\n",
+    "human[['prize','Base_Mean','log2FC','StdErr','Wald_Stats','P_value','P_adj']].to_csv(prize_file, sep='\\t')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -326,8 +338,6 @@
     }
    ],
    "source": [
-    "human[['prize','Base_Mean','log2FC','StdErr','Wald_Stats','P_value','P_adj']].to_csv(prize_file, sep='\\t')\n",
-    "\n",
     "graph.prepare_prizes(prize_file)"
    ]
   },
@@ -663,7 +673,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
