update volcano and bar to axial 0.2.0

--- a/analyses/Generate_Axial_Plots.ipynb
+++ b/analyses/Generate_Axial_Plots.ipynb
@@ -178,60 +178,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "PosixPath('/Users/alex/Documents/abcd1/docs/volcano.html')"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "axial.volcano(human, \n",
-    "              title='ABCD1 KO Transcriptome', \n",
-    "              scripts_mode='CDN', \n",
-    "              data_mode='inline', \n",
-    "              organism='human', \n",
-    "              output_dir='../docs', \n",
-    "              filename='volcano.html', \n",
-    "              version=\"latest\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "PosixPath('/Users/alex/Documents/abcd1/docs/bar.html')"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "axial.bar(human, \n",
-    "          title='ABCD1 KO Transcriptome', \n",
-    "          scripts_mode='CDN', \n",
-    "          data_mode='inline', \n",
-    "          organism='human', \n",
-    "          output_dir='../docs', \n",
-    "          filename='bar.html', \n",
-    "          version=\"latest\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -240,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -351,7 +297,7 @@
        "Selp    1.416603e-148  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -390,61 +336,8 @@
     "print(\"max q-val: \" + str(mouse_max_finite_log_qVal))\n",
     "\n",
     "mouse['logFC'] = np.around(mouse['log2(FC)'], decimals=3)\n",
-    "mouse = mouse.dropna(how='any', subset=['logFC', 'q'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "PosixPath('/Users/alex/Documents/abcd1/docs/mouse_volcano.html')"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "axial.volcano(mouse, \n",
-    "              title='ABCD1 KO Transcriptome', \n",
-    "              scripts_mode='CDN', \n",
-    "              data_mode='inline', \n",
-    "              organism='mouse', \n",
-    "              output_dir='../docs', \n",
-    "              filename='mouse_volcano.html', \n",
-    "              version=\"latest\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "PosixPath('/Users/alex/Documents/abcd1/docs/mouse_bar.html')"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "axial.bar(mouse, \n",
-    "          title='ABCD1 KO Transcriptome', \n",
-    "          scripts_mode='CDN', \n",
-    "          data_mode='inline', \n",
-    "          organism='mouse', \n",
-    "          output_dir='../docs', \n",
-    "          filename='mouse_bar.html', \n",
-    "          version=\"latest\")"
+    "mouse = mouse.dropna(how='any', subset=['logFC', 'q'])\n",
+    "mouse.index = mouse.index.str.upper()"
    ]
   },
   {
@@ -456,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -565,7 +458,7 @@
        "SLC1A6       2.153360e-27  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -600,55 +493,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "PosixPath('/Users/alex/Documents/abcd1/docs/lee_volcano.html')"
+       "PosixPath('/Users/alex/Documents/abcd1/docs/volcano.html')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "axial.volcano(lee, \n",
+    "axial.volcano({'human': human, 'mouse': mouse, 'ipsc': lee}, \n",
     "              title='ABCD1 KO Transcriptome', \n",
     "              scripts_mode='CDN', \n",
     "              data_mode='inline', \n",
     "              organism='human', \n",
     "              output_dir='../docs', \n",
-    "              filename='lee_volcano.html', \n",
+    "              filename='volcano.html', \n",
     "              version=\"latest\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "PosixPath('/Users/alex/Documents/abcd1/docs/lee_bar.html')"
+       "PosixPath('/Users/alex/Documents/abcd1/docs/bar.html')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "axial.bar(lee, \n",
+    "axial.bar({'human': human, 'mouse': mouse, 'ipsc': lee}, \n",
     "          title='ABCD1 KO Transcriptome', \n",
     "          scripts_mode='CDN', \n",
     "          data_mode='inline', \n",
     "          organism='human', \n",
     "          output_dir='../docs', \n",
-    "          filename='lee_bar.html', \n",
+    "          filename='bar.html', \n",
     "          version=\"latest\")"
    ]
   },
